container/manifest/sync/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: "ghcr.io/nekko-lab/tsudanuma24-hp:d3152c3a6857a605c713357e525fd40c581cef5f"
